# OpenMapCalendar

./: .gitignore  README.md  index.html  package-lock.json  package.json  pyproject.toml  server.js
planner_service/: __init__.py  distillation.py  export.py  graph.py  mcp.py  memory.py  paths.py  persistence.py  service.py  tools.py
scripts/: dev.js
src/: App.css  App.tsx  index.css  types.ts
src/components/: AiPlannerChat.css  AiPlannerChat.tsx  AppShell.css  AppShell.tsx  ColorPalette.css  ColorPalette.tsx  DayCard.css  DayCard.tsx  DayGrid.css  DayGrid.tsx  DaySidebar.css  DaySidebar.tsx  DragSelectionLayer.css  DragSelectionLayer.tsx  EventBlock.css  EventBlock.tsx  MapView.css  MapView.tsx  TimeRuler.css  TimeRuler.tsx  TopControls.css  TopControls.tsx
tests/: test_mcp_integration.py  test_planner_service.py
