[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "interactive-calendar-planner"
version = "0.1.0"
description = "Local planner service for the interactive calendar"
requires-python = ">=3.11"
dependencies = [
  "chromadb>=1.5.0",
  "langgraph>=0.2.0",
  "langgraph-checkpoint-sqlite>=2.0.0",
]

[tool.setuptools]
packages = ["planner_service"]
